[chore] fix bm-cli inject imap to target all user mailboxes